// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildIcsContent golden vectors > matches golden output for homeowner preset sample tasks 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-//NeatClock//NONSGML v1.0//EN
CALSCALE:GREGORIAN
METHOD:PUBLISH
BEGIN:VEVENT
UID:task-hs-1@neatclock.pro
DTSTAMP:20260624T120000Z
DTSTART;VALUE=DATE:20260624
SUMMARY:HVAC Filter Replacement
DESCRIPTION:Recurring NeatClock task. Repeats every 3 months.
RRULE:FREQ=MONTHLY;INTERVAL=3
END:VEVENT
BEGIN:VEVENT
UID:task-hs-2@neatclock.pro
DTSTAMP:20260624T120000Z
DTSTART;VALUE=DATE:20260624
SUMMARY:Smoke Detector Check
DESCRIPTION:Recurring NeatClock task. Repeats every 6 months.
RRULE:FREQ=MONTHLY;INTERVAL=6
END:VEVENT
BEGIN:VEVENT
UID:task-hs-3@neatclock.pro
DTSTAMP:20260624T120000Z
DTSTART;VALUE=DATE:20260624
SUMMARY:Gutter Clearance
DESCRIPTION:Recurring NeatClock task. Repeats every 6 months.
RRULE:FREQ=MONTHLY;INTERVAL=6
END:VEVENT
END:VCALENDAR"
`;

exports[`buildIcsContent golden vectors > matches golden output for weekly, monthly, and yearly mix 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-//NeatClock//NONSGML v1.0//EN
CALSCALE:GREGORIAN
METHOD:PUBLISH
BEGIN:VEVENT
UID:task-mix-1@neatclock.pro
DTSTAMP:20260624T120000Z
DTSTART;VALUE=DATE:20260624
SUMMARY:Weekly standup
DESCRIPTION:Recurring NeatClock task. Repeats every 1 weeks.
RRULE:FREQ=WEEKLY;INTERVAL=1
END:VEVENT
BEGIN:VEVENT
UID:task-mix-2@neatclock.pro
DTSTAMP:20260624T120000Z
DTSTART;VALUE=DATE:20260624
SUMMARY:Monthly review
DESCRIPTION:Recurring NeatClock task. Repeats every 2 months.
RRULE:FREQ=MONTHLY;INTERVAL=2
END:VEVENT
BEGIN:VEVENT
UID:task-mix-3@neatclock.pro
DTSTAMP:20260624T120000Z
DTSTART;VALUE=DATE:20260624
SUMMARY:Annual audit
DESCRIPTION:Recurring NeatClock task. Repeats every 1 years.
RRULE:FREQ=YEARLY;INTERVAL=1
END:VEVENT
END:VCALENDAR"
`;

exports[`buildIcsContent golden vectors > matches golden output with special characters in task names 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-//NeatClock//NONSGML v1.0//EN
CALSCALE:GREGORIAN
METHOD:PUBLISH
BEGIN:VEVENT
UID:task-sc-1@neatclock.pro
DTSTAMP:20260624T120000Z
DTSTART;VALUE=DATE:20260624
SUMMARY:Oil\\; change\\, now\\n(line two)
DESCRIPTION:Recurring NeatClock task. Repeats every 1 months.
RRULE:FREQ=MONTHLY;INTERVAL=1
END:VEVENT
BEGIN:VEVENT
UID:task-sc-2@neatclock.pro
DTSTAMP:20260624T120000Z
DTSTART;VALUE=DATE:20260624
SUMMARY:Backslash \\\\ test
DESCRIPTION:Recurring NeatClock task. Repeats every 2 weeks.
RRULE:FREQ=WEEKLY;INTERVAL=2
END:VEVENT
END:VCALENDAR"
`;
